Haphazard volume change with Ctrl+Up / Ctrl+Down
When using PulseAudio output, Ctrl+Up and Ctrl+Down are behaving haphazardly. This affects all UIs, so it must be a problem with hotkeys or with aout interface code.
When using PulseAudio output, Ctrl+Up and Ctrl+Down are behaving haphazardly. This affects all UIs, so it must be a problem with hotkeys or with aout interface code.
VideoLAN code repository instance