PulseAudio: correct volume reporting from PA to VLC (fix #6759)

The proper reciprocal formula to that of VLC to PA conversion must be
used. Otherwise, we get an inconsistent value in the "volume" variable.